# service-grpc

./: .gitignore  Cargo.toml  DockerFile  LICENSE  README.md  build.rs
proto/: video.proto
src/: fetcher.rs  grpc.rs  main.rs
src/ytdlp/: helper.rs  mod.rs
